Styles: Fix footer alignment
Added left/right:0.

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,6 +3,8 @@ footer {
   text-align: center;
   position: fixed;
   bottom: 0;
+  right: 0;
+  left: 0;
   border-top: 1px solid grey;
   z-index: 10;
   min-height: 5vh;
